Updates from ShareLaTeX

--- a/10_17_2018.tex
+++ b/10_17_2018.tex
@@ -205,8 +205,8 @@ $$γ= \{ (1,t) \in ℝ_+ \times S^1: t\ge 0 \}.$$
     \draw[->] (c) ++ (-2.25, 0) -- +(4.5, 0) node[right] {$x$};
     \draw[->] (c) ++(0, -2.25) -- + (0, 4.5) node[above] {$y$};
     
-    \draw[->,thick] (c) +(2,0) arc [start angle = 0, end angle = -45, radius = 2cm];
-    \draw[->, thick] (c) +(-45:2) arc [ start angle = -45, end angle = -225, radius = 2cm];
+    \draw[-<,thick] (c) +(2,0) arc [start angle = 0, end angle = -45, radius = 2cm];
+    \draw[-<, thick] (c) +(-45:2) arc [ start angle = -45, end angle = -225, radius = 2cm];
     \draw[thick] (c) + (-225:2) arc [start angle = -225, end angle = -360, radius = 2cm];
     
     % ---------- Explanation
