--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,9 @@
 
 \subfile{10_11_2018.tex}
 \subfile{10_17_2018.tex}
+\subfile{10_24_2018.tex}
+\subfile{10_25_2018.tex}
+
 \bibliographystyle{abbrvnat}
 \bibliography{references.bib}
 
