--- a/myStyle.sty
+++ b/myStyle.sty
@@ -6,6 +6,7 @@
 \usepackage{amsthm}  % used for "theorem style"
 \usepackage[german]{babel}
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage[square, numbers]{natbib}
 \usepackage{subfiles}
 \usepackage{unicode-math}
@@ -15,7 +16,8 @@
 \usepackage{hyperref}
 \usepackage{enumitem}
 \usepackage{titling}
-\usepackage{pgf, tikz}
+\usepackage{pgf}
+\usepackage{tikz}
 
 \usetikzlibrary{calc, intersections, decorations.markings}
 
