Updates from ShareLaTeX

--- a/10_24_2018.tex
+++ b/10_24_2018.tex
@@ -119,7 +119,7 @@ $$\|A\|_δ < ρ(A) + δ.$$
 \begin{bem}\label{2.19}
 Da im $ℝ^n$ alle Normen äquivalent sind, gibt für jede Norm $\|•\|$ und jedes $ε>0$ ein $C_ε$, so dass für alle $v\in ℝ^n$ gilt
 \begin{equation}
-\label{2.19}
+\label{eqn:2.19}
 \| A^n v \| \le C_ε \left( ρ(A) + ε \right)^n \| v \|,
 \end{equation}
 denn 
